[package]
name = "rusty-chain"
version = "0.1.0"
authors = ["Derrick W. Turk <dwt@terminusdatascience.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac-sha256 = "0.1.2"
uuid = { version = "0.8.1", features = ["v4"] }
